# block_tree_experiments

./: .gitmodules  CMakeLists.txt  README.md  run_benchmarks.sh
benchmarks/: block_tree_benchmark.cpp
template/: construction_parallel.tex  construction_with_rs_repetitive.tex  construction_wo_rs_repetitive.tex
template/data/: algorithm_names.txt  repetitive_belazzougui.txt  repetitive_our.txt  repetitive_our_parallel.txt
